Fixed table overflow

--- a/hw_diag/static/css/style.css
+++ b/hw_diag/static/css/style.css
@@ -94,3 +94,8 @@ html[data-sidenav-size=condensed]:not([data-layout=topnav]) .wrapper .content-pa
     color: #02A8F5 !important;
 }
 
+/* --- Tables --- */
+
+table {
+    overflow-wrap: anywhere !important;
+}
